EPUO-672: Perform Team Management Domain Check in FCS (#766)